--- a/src/global/assets/scss/core.scss
+++ b/src/global/assets/scss/core.scss
@@ -8,8 +8,8 @@
 @import "node_modules/spectre.css/src/mixins";
 @import "node_modules/spectre.css/src/variables";
 @import "node_modules/spectre.css/src/layout";
-@import "node_modules/spectre.css/src/utilities/position";
-@import "node_modules/spectre.css/src/utilities/divider";
+@import "node_modules/spectre.css/src/utilities/_position";
+@import "node_modules/spectre.css/src/utilities/_divider";
 
 * {
   box-sizing: border-box;
@@ -19,13 +19,13 @@ body {
   margin: 0;
 
   // font-family: 'Comfortaa', Arial, sans-serif;
-  font-family: Arial, sans-serif;
+  font-family: $font-family;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
   color: $color-text;
-  font-size: 16px;
-  line-height: 16px;
+  font-size: $font-size;
+  line-height: $font-size;
 
   overflow-y: scroll;
 }
@@ -38,6 +38,11 @@ p {
 span {
   line-height: 1em;
   margin: 0;
+}
+
+small,
+.small {
+  font-size: 0.75rem;
 }
 
 .light {
@@ -99,8 +104,4 @@ a {
 
 .hidden {
   display: none;
-}
-
-.mb-3 {
-  margin-bottom: 1rem;
 }
